fixed overflow on mobile devices

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -161,6 +161,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height:60vh;
     h1{
         font-size: 3em;
         @media screen and (max-width:768px) {
@@ -168,8 +169,9 @@ body{
         }
     }
     img{
+        max-width: 100vw;
         @media screen and (max-width:768px) {
-            transform:scale(0.7)
+            transform:scale(0.8)
         }
     }
 }
@@ -355,7 +357,7 @@ body{
 }
 #modal{
     @media screen and (max-width:400px) {
-        transform: scale(0.8) translateX(-15px);
+        transform: scale(0.9);
     }
 }
 .overlay-animation-enter{
